<resources>
    <string name="app_name">Coursawy</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="online_tests">Online Tests</string>
    <string name="offline_tests">Offline Tests</string>
    <string name="add_tests">Add Tests</string>
    <string name="countrycode"><u>+20</u></string>
    <string name="facebook_app_id">156320372563050</string>
    <string name="fb_login_protocol_scheme">fb156320372563050</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hesham Fawzy</string>
    <string name="nav_header_subtitle">Student</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_notification">Notifications</string>
    <string name="menu_courses">My Courses</string>
    <string name="menu_online_exams">Online Exams</string>
    <string name="menu_public_exam"><![CDATA[public exams & quizzes]]></string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_log_out">Log out</string>
    <string name="my_courses">My Courses</string>
    <string name="popular_courses">Popular Courses</string>
    <string name="quizes">Quizzes</string>
    <string name="log_out">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notifications">Notifications</string>
    <string name="popular_trainers">Popular Trainers</string>
    <string name="home">Home</string>
    <string name="add_new_exam">Add New Exam</string>
    <string name="create_new_room">Create New Room</string>
    <string name="cancel">Cancel</string>
    <string name="course_quiz">Course Quiz</string>
    <string name="secure_exam">Secure Exam</string>
    <string name="_private">private</string>
    <string name="_public">public</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="description">Description</string>
    <string name="upload_quiz">upload quiz</string>
    <string name="_ok">ok</string>
    <string name="download_example_file">download example file</string>
    <string name="instructions">Notes: \nyou have to upload exam as excel file \nin below format. \n \nrewrite the correct answer in column 6 ( f ).</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="connect_social_accounts">Connect Social Accounts</string>
    <string name="account">Account</string>
    <string name="solved">SOLVED</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="enter_exam_code">Enter Exam Code</string>
    <string name="online_exam">Online Exam</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="exit">exit</string>

    <string-array name="faculties">
        <item>Select</item>
        <item>Science</item>
        <item>Engineering</item>
        <item>Law</item>
        <item>Nursing</item>
        <item>Medicine</item>
        <item>Education</item>
        <item>Pharmacy</item>
        <item>Computers and AI</item>
    </string-array>

    <string-array name="studentgrades">
        <item>Select</item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="doctorgrades">
        <item>Select</item>
        <item>Teaching Assistant</item>
        <item> Assistant Lecturer</item>
        <item>Lecturer</item>
        <item>Associate Professor</item>
        <item>Professor</item>
        <item>Professor Emeritus</item>
    </string-array>

    <string-array name="CoursesCategory">
        <item>\t \tChoose Catogory</item>
        <item>IT</item>
        <item>Languages</item>
        <item>Science</item>
        <item>Health</item>
        <item>Software Development</item>
        <item>Software Engineering</item>
        <item>Finance</item>
        <item>Marketing</item>
    </string-array>

    <string-array name="Courses">
        <item>My Courses</item>
        <item>Android</item>
        <item>Web Development</item>
        <item>Flutter</item>
        <item>Machine Learning</item>
        <item>Algorithms</item>
    </string-array>

</resources>
